hphp/test/zend/bad/ext-sqlite3/sqlite3_loadextension_with_wrong_param.php
<?php
$db = new SQLite3(':memory:');
var_dump($db->loadExtension(array()));
echo "Done\n";
?>